--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                     <div class="col-xs-offset-0 col-md-offset-0 col-xs-12 col-md-12">
                         <h1>Software Developer, Architect and Entrepreneur</h1>
                         <p class="boxed citation">&ldquo;A designer knows he has achieved perfection not when there is nothing left to add, but when there is nothing left to take away.&rdquo;<br>Antoine de Saint-Exupéry</p>
-                        <p class="boxed">An highly skilled <strong>Full Stack</strong> developer with a strong preference for the <strong>Front End</strong>.</p>
-                        <p class="boxed">Fanatic of Minimalist Software Development, Accurate Database Design and Meticulous Business Analysis. Specialized in but not limited to Web Applications. Focused on Functional and Reactive paradigms as well as on Event Driven and Service Oriented architectures. Strongly experienced in Object-Oriented programming.</p>
-                        <p class="boxed">I've studied electronics, written my first code on a VIC 20 and, during 1999, finally understood that software development was my future. After that, during ~21 years, I've worked in various contexts developing applications for web as well as other purposes with JavaScript and many other programming languages.</p>
+                        <p class="boxed">An highly skilled <strong>Full Stack</strong> developer with strong preference for the <strong>Front End</strong>.</p>
+                        <p class="boxed">Fanatic of Minimalist Software Development, Accurate Database Design and Meticulous Business Analysis. Specialized in but not limited to Web Applications. Focused on Functional and Reactive paradigms as well as on Event Driven and Service Oriented architectures. Strongly experienced in Object Oriented programming.</p>
+                        <p class="boxed">I've studied electronics, written my first code on a VIC 20 and, during 1999, finally understood that software development was my future. After that, during ~21 years, I've worked in various contexts developing applications for web as well as for other purposes with JavaScript and many other programming languages.</p>
                         <p class="boxed">Software is my passion and a lot of my time is spent around it.</p>
                         <p class="boxed">
                             My interests are
