--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,11 @@
                             TRYOUTS
                         </a>
                     </li>
+                    <li class="menu-element menu-main-element">
+                        <a href="/other.html" class="delayed-opening">
+                            OTHER
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </div>
