--- a/projects/foondation.html
+++ b/projects/foondation.html
@@ -38,6 +38,11 @@
                             TRYOUTS
                         </a>
                     </li>
+                    <li class="menu-element menu-main-element">
+                        <a href="/other.html" class="delayed-opening">
+                            OTHER
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </div>
