--- a/other/index.html
+++ b/other/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Antonio De Luca - Tryouts</title>
+        <title>Antonio De Luca - Other</title>
         <link href="/stylesheets/index.css" rel="stylesheet" type="text/css">
     </head>
     <body>
@@ -16,7 +16,7 @@
                     <li class="menu-wrapper menu-open-wrapper">
                         <ul>
                             <li class="menu-element">
-                                <a href="/index.html" class="delayed-opening">
+                                <a href="/" class="delayed-opening">
                                     Summary
                                 </a>
                             </li> 
@@ -28,17 +28,17 @@
                         </ul>
                     </li>
                     <li class="menu-element menu-main-element">
-                        <a href="/projects.html" class="delayed-opening">
+                        <a href="/projects/" class="delayed-opening">
                             PROJECTS
                         </a>
                     </li>
                     <li class="menu-element menu-main-element">
-                        <a href="/tryouts.html" class="delayed-opening">
+                        <a href="/tryouts/" class="delayed-opening">
                             TRYOUTS
                         </a>
                     </li>
                     <li class="menu-element menu-main-element">
-                        <a href="/other.html" class="delayed-opening">
+                        <a href="/other/" class="delayed-opening">
                             OTHER
                         </a>
                     </li>
@@ -61,13 +61,10 @@
             <div id="content" class="container-fluid">
                 <div class="row">
                     <div class="col-xs-offset-0 col-md-offset-0 col-xs-12 col-md-12">
-                        <h1>Tryouts</h1>
-                        <p class="boxed citation">&ldquo;The best is the enemy of the good (Il meglio è l'inimico del bene).&rdquo;<br>An Italian proverb</p>
+                        <h1>Other</h1>
+                        <p class="boxed citation">&ldquo;Imperfection is the best thing that could happen to us.&rdquo;<br>Antonio De Luca</p>
                         <p class="boxed">
-                            <strong>An application for simulating a calculator</strong><br>(https://github.com/antoniodeluca/an-application-for-simulating-a-calculator)
-                        </p> 
-                        <p class="boxed">
-                            <strong>An application skeleton for Full Stack development</strong><br>(https://github.com/antoniodeluca/an-application-skeleton-for-fullstack-development)
+                            <a href="/other/neural-networks-in-javascript.html" class="delayed-opening">Neural networks in JavaScript</a>
                         </p>                                                                                                                                           
                     </div>
                 </div>
