--- a/other/neural-networks-in-javascript/index.html
+++ b/other/neural-networks-in-javascript/index.html
@@ -17,7 +17,7 @@
                     <li class="menu-wrapper menu-open-wrapper">
                         <ul>
                             <li class="menu-element">
-                                <a href="/index.html" class="delayed-opening">
+                                <a href="/" class="delayed-opening">
                                     Summary
                                 </a>
                             </li> 
@@ -29,17 +29,17 @@
                         </ul>
                     </li>
                     <li class="menu-element menu-main-element">
-                        <a href="/projects.html" class="delayed-opening">
+                        <a href="/projects/" class="delayed-opening">
                             PROJECTS
                         </a>
                     </li>
                     <li class="menu-element menu-main-element">
-                        <a href="/tryouts.html" class="delayed-opening">
+                        <a href="/tryouts/" class="delayed-opening">
                             TRYOUTS
                         </a>
                     </li>
                     <li class="menu-element menu-main-element">
-                        <a href="/other.html" class="delayed-opening">
+                        <a href="/other/" class="delayed-opening">
                             OTHER
                         </a>
                     </li>
