Fixed an internal link

--- a/other/index.html
+++ b/other/index.html
@@ -64,7 +64,7 @@
                         <h1>Other</h1>
                         <p class="boxed citation">&ldquo;Imperfection is the best thing that could happen to us.&rdquo;<br>Antonio De Luca</p>
                         <p class="boxed">
-                            <a href="/other/neural-networks-in-javascript.html" class="delayed-opening">Neural networks in JavaScript</a>
+                            <a href="/other/neural-networks-in-javascript/" class="delayed-opening">Neural networks in JavaScript</a>
                         </p>                                                                                                                                           
                     </div>
                 </div>
